Scroll sticky elements into view.

We specifically ignore elements that scroll with the viewport, but sticky
elements should be scrolled into view.

BUG=662723
TEST=fast/scroll-behavior/scroll-into-view-sticky.html

Review-Url: https://codereview.chromium.org/2488563003
Cr-Commit-Position: refs/heads/master@{#430969}

Former-commit-id: 9e23825d88c48013fb892c755106d21c9aebeeb2